Section-7/7.3-ContextPathRouting/Backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: ingress-app-backend-deployment
  labels:
    app: ingress-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ingress-backend
  template:  
    metadata:
      labels: 
        app: ingress-backend
    spec:
      containers:
        - name: ingress-backend-pod
          image: praravind1801/ingress-backend:v1
          ports: 
            - containerPort: 80
