Section-7/7.3-ContextPathRouting/Backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-backend-app-service
  labels:
    app: ingress-backend
spec:
  type: ClusterIP
  selector:
    app: ingress-backend
  ports:
    - port: 80
      targetPort: 80
